# buddhi-pragati

./: Doxyfile  LICENSE  README.md  References.md  crossword_config.txt  environment.yml  models_description.txt  pyproject.toml  run_crossword_benchmark.py
.github/workflows/: documentation.yml  test.yml
buddhi_pragati/: __init__.py
buddhi_pragati/core/: __init__.py  base_evaluator.py  base_puzzle.py
buddhi_pragati/data/: __init__.py  data_structure.py  dataset_builder.py  dataset_state.json  datasets_models.txt  local_backup_manager.py
buddhi_pragati/evaluate/: __init__.py  dataset_loader.py  evaluator.py  experiment_runner.py  metrics.py  model_classifier.py  parser.py  results_manager.py  templates.py
buddhi_pragati/experiments/: __init__.py
buddhi_pragati/generate/: __init__.py  corpus_loader.py  hf_uploader.py  memetic_generator.py  puzzle_builder.py  puzzle_entry.py  puzzle_visualisation.py
buddhi_pragati/models/: __init__.py  model_interface.py
buddhi_pragati/scripts/: README.md  run_all_experiments.sh  run_analysis_experiments.sh  run_dataset_creation.sh  run_focused_experiments.sh  run_generate_puzzles.sh  run_master_experiment.sh  safe_experiments.pbs  submit_experiments.pbs
buddhi_pragati/utils/: __init__.py  config_loader.py  create_corpus.py  dataset_manager.py  indian_context_scorer.py  indian_corpus.json  seed_corpus.json  unicode_utils.py
docs/html/: README_8md.html  ____init_____8py.html  ____init_____8py_source.html  annotated.html  base__evaluator_8py.html  base__evaluator_8py_source.html  base__puzzle_8py.html  base__puzzle_8py_source.html  bhasha__wiki__processor_8py.html  bhasha__wiki__processor_8py_source.html  buddhi__pragati_2scripts_2README_8md.html  classbuddhi__pragati_1_1core_1_1base__evaluator_1_1BaseEvaluator-members.html  classbuddhi__pragati_1_1core_1_1base__evaluator_1_1BaseEvaluator.html  classbuddhi__pragati_1_1core_1_1base__puzzle_1_1BasePuzzle-members.html  classbuddhi__pragati_1_1core_1_1base__puzzle_1_1BasePuzzle.html  classbuddhi__pragati_1_1core_1_1base__puzzle_1_1CrosswordClue-members.html  classbuddhi__pragati_1_1core_1_1base__puzzle_1_1CrosswordClue.html  classbuddhi__pragati_1_1core_1_1base__puzzle_1_1CrosswordPuzzle-members.html  classbuddhi__pragati_1_1core_1_1base__puzzle_1_1CrosswordPuzzle.html  classbuddhi__pragati_1_1data_1_1data__structure_1_1DatasetEntry-members.html  classbuddhi__pragati_1_1data_1_1data__structure_1_1DatasetEntry.html  classbuddhi__pragati_1_1data_1_1dataset__builder_1_1DatasetBuilder-members.html  classbuddhi__pragati_1_1data_1_1dataset__builder_1_1DatasetBuilder.html  classbuddhi__pragati_1_1data_1_1dataset__builder_1_1SourceProcessor-members.html  classbuddhi__pragati_1_1data_1_1dataset__builder_1_1SourceProcessor.html  classbuddhi__pragati_1_1data_1_1local__backup__manager_1_1LocalBackupManager-members.html  classbuddhi__pragati_1_1data_1_1local__backup__manager_1_1LocalBackupManager.html  classbuddhi__pragati_1_1data_1_1source__processors_1_1bhasha__wiki__processor_1_1BhashaWikiProcessor-members.html  classbuddhi__pragati_1_1data_1_1source__processors_1_1bhasha__wiki__processor_1_1BhashaWikiProcessor.html  classbuddhi__pragati_1_1data_1_1source__processors_1_1indic__wikibio__processor_1_1IndicWikiBioProcessor-members.html  classbuddhi__pragati_1_1data_1_1source__processors_1_1indic__wikibio__processor_1_1IndicWikiBioProcessor.html  classbuddhi__pragati_1_1data_1_1source__processors_1_1indowordnet__processor_1_1IndoWordNetProcessor-members.html  classbuddhi__pragati_1_1data_1_1source__processors_1_1indowordnet__processor_1_1IndoWordNetProcessor.html  (+249 more)
docs/latex/: annotated.tex  (+193 more)
tests/: test_data_simple.py  test_evaluate.py  test_generate.py  test_models_simple.py
(+118 files in other folders)
