[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddhi-pragati"
version = "0.1.0"
authors = [
    {name = "Selim Brahim Khouaja", email = "selim.khouaja24@imperial.ac.uk"},
]
description = "Buddhi-Pragati: Comprehensive reasoning LLM benchmark in Indic languages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = [
    "nlp", "llm", "evaluation", "benchmark", 
    "indic-languages", "intelligence", "puzzles", 
    "cultural-validation", "contamination-detection"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Hindi",
    "Natural Language :: Tamil",
    "Natural Language :: Telugu",
    "Natural Language :: Kannada",
    "Natural Language :: Urdu",
    "Natural Language :: Malayalam",
    "Natural Language :: Bengali",
    "Natural Language :: Assamese"
]

# Core dependencies needed for puzzle_framework.py
dependencies = [
    "torch>=1.13.0",
    "transformers>=4.21.0",
    "tf-keras>=2.15.0",  # Required for transformers compatibility with Keras 3
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "datasets>=2.0.0",
    "scipy>=1.9.0",
    "pandas>=1.5.0",
    "regex>=2022.7.9",
    "editdistance>=0.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyiwn>=0.0.4",
    "huggingface-hub>=0.16.0",
    "sentence-transformers>=2.0.0",
    "sarvamai>=0.1.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
# API model support
api = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "requests>=2.28.0",
    "sarvamai>=0.1.0"
]

# Development tools
dev = [
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "ruff>=0.0.289",
    "sarvamai>=0.1.0"
]

# Visualization and analysis
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "jupyter>=1.0.0",
]

# Cultural validation (future phases)
cultural = [
    "nltk>=3.7",
    "spacy>=3.4.0",
]

# Enhanced context scoring with semantic embeddings
scoring = [
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
]

# Everything for full development
all = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "requests>=2.28.0",
    "pytest>=7.0.0",
    "ruff>=0.0.289",
    "mypy>=0.991",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "jupyter>=1.0.0",
    "nltk>=3.7",
    "spacy>=3.4.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
    "pyiwn>=0.0.4",
    "sarvamai>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/ese-ada-lovelace-2024/irp-sbk124"
Repository = "https://github.com/ese-ada-lovelace-2024/irp-sbk124"


# Command line entry points
[project.scripts]
buddhi-pragati = "buddhi_pragati.cli:main"

# Package discovery - matches your folder structure
[tool.setuptools]
packages = ["buddhi_pragati"]

# Include your config files and data
[tool.setuptools.package-data]
buddhi_pragati = [
    "configs/*.yaml", 
    "data/**/*.json",
    "*.yaml"
]

# Development tools configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]  # Enable specific rules
ignore = ["E501"]         # Ignore specific rules